--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                                         <div class="col-lg-1"></div>
                                         <div class="col-lg-5">
                                             <img src="./assets/Screen Shot 2021-01-07 at 12.12.16 AM.png" class="img-fluid img-thumbnail figure-img rounded" alt="PassGenylogo">
-                                            <a href="https://github.com/transphat/burgersolution.git" class="figure-caption text-center">BurgerMe</a> 
+                                            <a href="https://burgersolution.herokuapp.com/burgers" class="figure-caption text-center">BurgerMe</a> 
                                         </div>
            
                                     </div>
@@ -74,7 +74,7 @@
                                         <div class="col-lg-1"></div>
                                         <div class="col-lg-5">
                                             <img src="./assets/Screen Shot 2021-01-11 at 12.32.06 AM.png" class="img-fluid img-thumbnail figure-img rounded" alt="PassGenylogo">
-                                            <a href="https://trans-googlebooks.herokuapp.com/" class="figure-caption text-center">GoogleBooks</a> 
+                                            <a href="https://github.com/transphat/GoogleBooks.git" class="figure-caption text-center">GoogleBooks</a> 
                                         </div>
            
                                     </div>
